styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");

:root {
  --color-primary: #2d2d2d;
  --color-dark: rgba(34, 34, 34, 0.9);
  --color-secondary: #14beb1;
  --color-accent: #3e54ab;
  --transparent-panel: rgba(12, 12, 12, 50%);
  --transparent-panel-light: rgba(99, 99, 99, 20%);
  --secondary-border: 1px solid var(--color-secondary);
  --section-margin: 0 0 8rem 0;
}

/* 
 * General styles
 */

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  scroll-behavior: smooth;
  font-size: 16px;
}

body {
  font-family: "Montserrat", sans-serif;
  min-height: 100vh;
  color: #fff;
  margin: 0 auto;
  text-align: center;

  background-color: var(--color-primary);
}

li {
  list-style-type: none;
}

a {
  text-decoration: none;
  color: inherit;
}

p {
  text-align: left;
  line-height: 1.4;
}

strong {
  text-shadow: 0 0 7px var(--color-secondary);
}

.icon {
  padding: 1rem;
  color: white;
}

.link {
  padding: 0.75rem;
  text-transform: uppercase;
  letter-spacing: 1px;

  background-image: linear-gradient(
    transparent 0%,
    transparent 90%,
    var(--color-secondary) 90%,
    var(--color-secondary) 100%
  );

  background-repeat: no-repeat;
  background-size: 0% 100%;
  background-position-x: right;

  transition: background-size 300ms, text-shadow 300ms;
}

.btn-link {
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 500;
  cursor: pointer;
  color: #fff;
  background-color: inherit;
  border: 2px solid #fff;
  border-radius: 15px;
  padding: 0.75rem;
}

.glow-heading {
  font-weight: 400;
  text-shadow: 0 0 10px var(--color-secondary);
  transition: text-shadow 0.5s;
}

section .glow-heading {
  margin: 2rem auto;
  padding: 1rem;
  font-size: 2rem;
  letter-spacing: 2px;
  border-bottom: var(--secondary-border);
  width: max-content;
}

/* Page Styles */

/* 
 * Header 
 */
header {
  /* position: sticky;
  top: 0;
  left: 0; */
  width: 100%;
  padding: 1rem 1rem;
  background-color: var(--transparent-panel);
  border-radius: 0px 0px 20px 20px;
}

header > ul {
  justify-content: flex-end;
  align-items: center;
  gap: 1rem;
}

header > ul li:first-of-type {
  margin-right: auto;
}

header img {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  border: 1px solid var(--color-secondary);
}

/* 
 * Landing section 
 */

#title-card {
  margin: var(--section-margin);
  min-height: calc(90vh);
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: 1fr 1fr;
  /* grid-template-rows: minmax(320px, 1fr) 80px 0.5fr;
  grid-template-columns: 1fr; */
  align-items: center;
}

#title-card > div {
  padding: 0 2rem;
}

#title-card > div:first-child {
  justify-self: right;
  position: relative;
}

#title-card > div:first-child::after {
  content: "";
  background: var(--color-secondary);
  position: absolute;
  top: -2rem;
  right: 0;
  height: calc(100% + 4rem);
  width: 1.5px;
}

.terminal-border {
  margin: auto;
  margin-bottom: 1rem;
  width: max(20vw, 325px);
  height: max(16vw, 300px);
  background-color: var(--transparent-panel);
  border: 2px solid var(--transparent-panel);
  border-radius: 20px;
  animation: border-glow 4s linear infinite;
}

@keyframes border-glow {
  0% {
    border-color: var(--color-secondary);
  }

  50% {
    border-color: var(--transparent-panel);
  }

  100% {
    border-color: var(--color-secondary);
  }
}

#terminal-prompt {
  width: 75%;
  aspect-ratio: 1;
  fill: #fff;
  filter: drop-shadow(0px 0px 10px var(--color-secondary));
}

.title {
  font-size: 2rem;
  text-align: left;
}

.typing-text {
  overflow: hidden;
  border-right: 0.15em solid #fff;
  white-space: nowrap;
  margin: 0 auto;
  letter-spacing: 0.15em;
  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
}

/* The typing effect */
@keyframes typing {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }

  50% {
    border-color: #fff;
  }
}

.about > p {
  padding: 1rem 0;
  max-width: 45ch;
}

/* 
 * Project showcase section 
 */
#portfolio {
  margin: var(--section-margin);
}

#project-carousel {
  margin: 1rem auto 6rem;
  width: 90%;
  justify-content: start;
  gap: 3rem;
  overflow-x: scroll;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
  scroll-padding: 15px;
  scrollbar-width: none;
}

.scroll-arrow {
  display: none;
}

.project-card {
  position: relative;
  max-width: 300px;
  min-width: 300px;
  height: auto;
  padding: 0.75rem 0;
  background-color: var(--transparent-panel);
  border-radius: 15px;
  justify-content: flex-start;
  align-items: center;

  scroll-snap-align: start;
  scroll-snap-stop: always;
}

.project-card > :is(*:nth-child(even), *:last-child) {
  position: absolute;
  z-index: 2;
  opacity: 0;
}

.project-card .tech-stack {
  top: 20%;
}
.project-card .card-description {
  top: 30%;
}
.project-card a {
  top: 60%;
}

.project-card .card-description {
  margin: 0.5rem;
}

.project-card a {
  margin-top: auto;
}

.tech-stack {
  padding: 0.5rem 0;
  width: 90%;
  justify-content: center;
}

.tech-stack li {
  margin: 0.1rem;
  padding: 0.3rem;
  border-radius: 10px;
  font-size: small;
  background-color: var(--color-secondary);
  color: #000;
}

.project-photo {
  width: 100%;
  aspect-ratio: 1;
}

.featured-project {
  max-width: 85%;
  margin: auto;
  padding: 2rem 1rem;
  display: grid;
  grid-template-columns: 0.75fr 1fr;
  grid-template-rows: 1fr;
  column-gap: 2rem;
  justify-items: end;
  align-items: center;
  border: var(--secondary-border);
}

.featured-project p {
  text-indent: 3ch;
  justify-self: center;
  width: 70%;
}

iframe {
  width: min(100%, 800px);
  aspect-ratio: 16 / 9;
}

/* 
 * Contact/links section 
 */

#contact {
  margin: var(--section-margin);
  padding: 2rem 0 4rem 0;
}

#contact h2 {
  margin: auto;
  margin-bottom: 2rem;
  text-align: center;
  max-width: 70ch;
}

#contact > div {
  width: 80%;
  min-width: 350px;
  margin: auto;
  justify-content: center;
  margin-bottom: 4rem;
}

#contact i[class~="fa-github"] {
  animation: green-icon-glow 1s ease-in-out infinite alternate;
}

#contact i[class~="fa-linkedin"] {
  animation: blue-icon-glow 1s ease-in-out infinite alternate;
}

#contact i[class~="fa-envelope"] {
  animation: purple-icon-glow 1s ease-in-out infinite alternate;
}

#email-form {
  width: 365px;
  margin: auto;
  padding: 1rem 2rem;
  background-color: var(--transparent-panel);
  color: #fff;
  text-align: start;

  border-radius: 7px;
  box-shadow: 0 0 8px #333;
}

.form-group {
  font-size: 16px;
  margin: 1rem 0;
  padding: 0.5rem 0;
}

.form-group :is(input, select, textarea) {
  font-size: inherit;
  width: 100%;
  color: inherit;
  background-color: var(--color-primary);
  border: 1px inset #555;
  border-radius: 7px;
  padding: 0.875rem;
  padding-left: 0;
}

.form-group input,
.form-group textarea {
  padding-left: 0.375rem;
  resize: none;
}

input:focus,
select:focus,
textarea:focus {
  outline: none;
  border: 2px solid var(--color-secondary);
}

#email-form .btn-link {
  width: 125px;
  margin: 0 0.5rem;
}

@keyframes green-icon-glow {
  0% {
    text-shadow: 0 0 10px #25d366, 0 0 20px #48ee85, 0 0 30px #0ec0a5;
  }

  100% {
    text-shadow: 0 0 5px #25d366, 0 0 10px #48ee85, 0 0 15px #0ec0a5;
  }
}

@keyframes blue-icon-glow {
  0% {
    text-shadow: 0 0 10px #1877f2, 0 0 20px #1459b3, 0 0 30px #189bff;
  }

  100% {
    text-shadow: 0 0 5px #1877f2, 0 0 10px #1459b3, 0 0 15px #189bff;
  }
}

@keyframes purple-icon-glow {
  0% {
    text-shadow: 0 0 10px #ff1177, 0 0 20px #d6249f,
      0 0 30px var(--color-accent);
  }

  100% {
    text-shadow: 0 0 5px #ff1177, 0 0 10px #d6249f, 0 0 15px var(--color-accent);
  }
}

/* 
 * Media Queries 
 */

/* for devices that support hovering (i.e. non touch-screens)*/
@media (hover: hover) {
  .link:hover {
    text-shadow: 0 0 5px var(--color-secondary);
    background-size: 100% 100%;
    background-position-x: left;
  }

  .icon:hover {
    transform: translateY(-6px);
    transition: transform 0.5s;
  }

  .btn-link:hover {
    transform: translateY(-3px);
    color: var(--color-accent);
    border: 2px solid var(--color-accent);
    background-color: #fff;
    transition: transform 0.3s, color 0.3s, background-color 0.3s, border 0.3s;
  }

  .glow-heading:hover {
    text-shadow: 0 3px 20px var(--color-secondary);
    cursor: default;
  }

  .project-card:hover > :is(*:nth-child(even), *:last-child) {
    opacity: 1;
    transition: opacity 1s;
  }

  .project-card:hover::after {
    content: "";
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background: rgba(12, 12, 12, 80%);
    border-radius: 10px;
  }
}

/* handles 'hover' effect on mobile */
@media (hover: none) {
  .project-card.in-view > :is(*:nth-child(even), *:last-child) {
    opacity: 1;
    transition: opacity 1s;
  }

  .project-card.in-view::after {
    content: "";
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background: rgba(12, 12, 12, 80%);
    border-radius: 10px;
  }
}

/* tablet screens and split-window display */
@media screen and (max-width: 950px) {
  #title-card {
    grid-template-rows: 75% 25%;
    grid-template-columns: 1fr;
  }

  #title-card > div:first-child {
    align-self: end !important;
  }

  #title-card > div {
    justify-self: center !important;
    padding: 0 0 1rem;
    margin: 0 5% 1rem;
  }

  #title-card > div:first-child::after {
    content: "";
    background: var(--color-secondary);
    position: absolute;
    top: 100%;
    width: 100%;
    height: 1.5px;
  }

  .featured-project {
    grid-template-columns: 1fr;
    grid-template-rows: 0.5fr 1fr;
    row-gap: 0.5rem;
  }

  .scroll-arrow {
    display: block;
    width: 64px;
    height: 64px;
    margin: 0 auto;
    border: 1px solid #000;
    border-radius: 50%;
    background-color: var(--transparent-panel);
    transition: transform 1s;
    animation: border-glow 4s linear infinite;
  }

  .scroll-arrow svg {
    width: 100%;
    fill: #fff;
    filter: drop-shadow(0px 0px 25px var(--color-secondary));
  }

  .scroll-arrow.end {
    transform: rotateZ(180deg);
  }

  #contact > div {
    flex-direction: column;
    align-items: flex-start;
  }
}

/* phone screen layout changes */
@media screen and (max-width: 450px) {
  header > ul {
    gap: 0;
    justify-content: center;
  }

  header li {
    flex: 1;
  }

  header > ul li:first-of-type {
    display: none;
  }

  .title {
    font-size: 1.3rem;
  }

  .featured-project p {
    width: 90%;
  }
}

/* 
 * Utility 
 */

.flex {
  display: flex;
}

.f-col {
  flex-direction: column;
}

.f-row {
  flex-direction: row;
}

.f-centered {
  justify-content: center;
  align-items: center;
}

